# terra

./: .Rbuildignore  .gitattributes  .gitignore  .travis.yml  404.html  DESCRIPTION  ISSUE_TEMPLATE.html  ISSUE_TEMPLATE.md  LICENSE-text.html  LICENSE-text.md  NAMESPACE  NEWS.md  README.html  README.md  _pkgdown.yml  authors.html  authors.md  cleanup  configure  configure.ac  index.html  index.md  llms.txt  pkgdown.yml  proj_conf_test  proj_conf_test.c  proj_conf_test.cpp  search.json  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pkgdown.yml  rcmdcheck.yml  recheck.yaml  sync-src-to-tappa.yml  wheels.yml
C/: compile.sh  fun.cpp  fun.h  main.cpp  show.cpp  show.h
R/: AAAclasses.R  AAgeneric_functions.R  Aclasses.R  Adepracated.R  Agenerics.R  Agenerics_watershed2_extesion.R  Arith_generics.R  RGB.R  RcppExports.R  SpatDataSet.R  SpatNetwork.R  SpatRasterDataset.R  SpatVectorCollection.R  Zdepracated.R  Zdeprecated.R  aggregate.R  animate.R  app.R  approxNA.R  approximate.R  arith.R  arrows_on_rast.R  as.arrows.R  as.matrix.R  autocor.R  boxplot.R  c.R  capp.R  cells.R  cellsFrom-extentFrom.R  chunk.R  clean.R  click.R  clip.R  coerce.R  coerceExternal.R  colors.R  connect.R  crop.R  crosstab.R  (+129 more)
cmdapp/: Makefile  README.md  compile.sh  fun.h  gdal_init.cpp  gdal_init.h  gdalinfo.cpp  main.cpp  show.cpp  test.sh
cterra/: rasterFromFile.cpp  read_rst.cpp  sample.cpp
docker/base/: Dockerfile
docs/: 404.html  LICENSE-text.html  authors.html  index.html  index.md  pkgdown.yml
docs/reference/: NAflag.html  RGB.html  SpatExtent-class.html  SpatRaster-class.html  SpatVector-class.html  add.html  adjacent.html  aggregate.html  align.html  animate.html  app.html  area.html  arith.html  as.character.html  as.data.frame.html  as.raster.html  as.spatvector.html  atan2.html  autocor.html  barplot.html  boundaries.html  boxplot.html  buffer.html  c.html  cartogram.html  cells.html  centroids.html  chull.html  clamp.html  classify.html  click.html  coerce.html  collapse.html  colors.html  compareGeom.html  contour.html  coords.html  copy.html  cover.html  crop.html  (+118 more)
inst/colors/: legends.rds  palettes.rds
inst/ecor/: example_v0.R  example_v1.R  example_v2.R  niger3s_v2.R  niger_test.R  niger_test_filename.R  niger_v2.R
inst/ex/: countries.rds  elev.tif  elev_vinschgau.tif  logo.tif  lux.dbf  lux.gpkg  lux_highways.rds  meuse.rds  meuse.tif  nouragues.nc  sent2_L2A_2024-08-24.tif  test.grd  test.gri  test.rds  test.tif
inst/exdata/: logo.grd  logo.gri  logo.tif  test.tif
inst/ltd_flow_tests/: flowdir_example_vv.R  flowdir_example_vv2.R  flowdir_example_vv2_with_aspect.R  flowdird8ltd_example_vinschgau.R  pitfiller_example_vv.R  (+6 more)
man/: FloWAccu2.Rd  FloWAccu2_weight.Rd  NAflag.Rd  NIDP.Rd  NIPD.Rd  NIPD2.Rd  RGB.Rd  Rcpp-classes.Rd  SpatDataFrame-class.Rd  SpatExtent-class.Rd  SpatLayer-class.Rd  SpatMessages-class.Rd  SpatOptions-class.Rd  SpatRaster-class.Rd  SpatVector-class.Rd  Summary-methods.Rd  activeCat.Rd  add.Rd  add_abline.Rd  add_mtext.Rd  adjacent.Rd  aggregate.Rd  agitate.Rd  align.Rd  all.equal.Rd  animate.Rd  app.Rd  approxNA.Rd  approximate.Rd  ar_info.Rd  area.Rd  arith-generic.Rd  arith.Rd  arrow.Rd  arrows_on_rast.Rd  as.arrows.Rd  as.character.Rd  as.data.frame.Rd  as.lines.Rd  as.list.Rd  (+328 more)
misc/: testing-ordinal-categories.md  write.cpp  write_raster.cpp
news/: index.html  index.md
python/: CMakeLists.txt  README.md  pyproject.toml  pytest.ini
python/src/: pyterra_module.cpp  terra_module.cpp
python/src/pyterra/: __init__.py  extent.py  generics.py  rast.py  vect.py
python/src/terra/: __init__.py  _helpers.py  aggregate.py  app.py  arith.py  cells.py  coerce.py  crosstab.py  crs.py  distance.py  extent.py  extract.py  flow_accumulation.py  focal.py  freq.py  generics.py  geom.py  init.py  levels.py  math.py  merge.py  methods.py  names.py  pitfinder.py  plot.py  rast.py  rasterize.py  relate.py  sample.py  show.py  spatvec.py  stats.py  subset.py  time.py  values.py  vect.py  window.py  write.py  zonal.py
python/tests/: conftest.py  path_utils.py  test_aggregate.py  test_arith.py  test_cats.py  test_classify.py  test_crds.py  test_crop.py  test_crosstab.py  test_distance.py  test_equal.py  test_extent.py  test_extract.py  test_flowaccumulation.py  test_focal.py  test_freq.py  test_geom.py  test_global.py  test_matrix_input.py  test_merge.py  test_multivariate.py  test_patches.py  test_pitfinder.py  test_raster_subset.py  test_rasterize.py  test_subst.py  test_time.py  test_vector_subset.py  test_weighted_mean.py  test_zonal.py
reference/: $,SpatVectorCollection-method.html  %in%.html  Arith,SpatExtent,numeric-method.html  NAflag,SpatRaster-method.html  NAflag.html  NAflag.md  NIDP,SpatRaster-method.html  NIDP.html  NIDP.md  NIPD.html  NIPD.md  RGB,SpatRaster-method.html  RGB.html  RGB.md  SpatExtent-class.html  SpatExtent-class.md  SpatRaster-class.html  SpatRaster-class.md  SpatRasterCollection-class.html  SpatVector-class.html  SpatVector-class.md  SpatVectorCollection.html  Summary,SpatVector-method.html  [,SpatVector,data.frame,missing-method.html  [[,SpatVector,numeric,missing-method.html  activeCat,SpatRaster-method.html  activeCat.html  activeCat.md  add.html  add.md  add_abline.html  add_abline.md  add_mtext.html  add_mtext.md  adjacent,SpatVector-method.html  adjacent.html  adjacent.md  aggregate,SpatVector-method.html  aggregate.html  aggregate.md  (+838 more)
src/: GeographicLib_geodesic.c  Makevars  Makevars.in  Makevars.oldwin  Makevars.ucrt  Makevars.win  NA.h  RcppExports.cpp  RcppFunctions.cpp  RcppFunctions.h  RcppModule.cpp  SpatRasterMultiple.h  aaaread_ogr.cpp  aageos.cpp  addSource.cpp  adjacent.cpp  aggregate.cpp  aiogdal.cpp  apply.cpp  area.cpp  arith.cpp  as.cpp  as_points.cpp  bilinear.cpp  blend.cpp  boost-test.cpp  broom.cpp  bufclipper.cpp  buffer.cpp  catchments.cpp  catchments.h  catchments_flow_d8ltd.cpp  catchments_flow_d8ltd.h  catchments_pitfiller.cpp  catchments_pitfiller.h  catchments_pitfiller_2.cpp  categories.cpp  cellnumber.cpp  clamp.cpp  clipper.core.h  (+212 more)
tests/: testthat.R
tools/: winlibs.R
(+87 files in other folders)
