[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"


[project]
name = "terra"
version = "1.9.11"
description = "Python version of terra"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.9"
# No Python-level runtime dependencies; the C++ extension links GDAL/GEOS/PROJ
# directly.  Optional extras below cover interoperability packages.
dependencies = []

[project.optional-dependencies]
geo = ["numpy", "pandas"]

[project.urls]
Homepage = "https://github.com/rspatial/terra"


[tool.scikit-build]
# Let scikit-build-core find our CMakeLists.txt in the same directory.
cmake.build-type = "Release"

# The installed package is everything under src/terra/
wheel.packages = ["src/terra"]

# Make `pip install -e .` work: build the extension in-place.
build-dir = "build/{wheel_tag}"


[tool.scikit-build.cmake.define]
# Pass through any user-set variables (e.g. CMAKE_PREFIX_PATH for custom
# GDAL/GEOS installs) without hard-coding paths here.


[tool.cibuildwheel]
# Configuration for building wheels on CI (e.g. GitHub Actions + cibuildwheel).
# Adjust as needed for your platform.
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*"]

[tool.cibuildwheel.linux]
before-all = "yum install -y gdal-devel geos-devel proj-devel || apt-get install -y libgdal-dev libgeos-dev libproj-dev"

[tool.cibuildwheel.macos]
before-all = "brew install gdal geos proj"
