[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"


[project]
# PyPI / pip name and import package: geospat (see wheel.packages → src/geospat/)
name = "geospat"
version = "1.9.11"
description = "geospat — Python bindings for the terra geospatial C++ library (R-terra API)"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.9"
# No Python-level runtime dependencies; the C++ extension links GDAL/GEOS/PROJ
# directly.  Optional extras below cover interoperability packages.
dependencies = []

[project.optional-dependencies]
geo = ["numpy", "pandas"]

[project.urls]
Homepage = "https://github.com/rspatial/terra"


[tool.scikit-build]
# Let scikit-build-core find our CMakeLists.txt in the same directory.
cmake.build-type = "Release"

# The installed package is everything under src/geospat/
wheel.packages = ["src/geospat"]

# Make `pip install -e .` work: build the extension in-place.
build-dir = "build/{wheel_tag}"


[tool.scikit-build.cmake.define]
# Pass through any user-set variables (e.g. CMAKE_PREFIX_PATH for custom
# GDAL/GEOS installs) without hard-coding paths here.


[tool.cibuildwheel]
# CI wheel builds (see .github/workflows/wheels.yml). Vendor C++ sources: workflow
# copies repo `src/` → `python/_geospat_cpp_src/` so isolated builds find them.
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*"]
skip = ["*-musllinux_*", "pp*"]
test-command = "python -c \"import geospat; print('geospat', geospat.__file__)\""

[tool.cibuildwheel.linux]
# manylinux_2_28 (Alma): dnf + EPEL; fall back to yum (2014) or apt (debian-based).
before-all = "bash -c 'if command -v dnf >/dev/null 2>&1; then dnf install -y epel-release && dnf install -y gdal-devel geos-devel proj-devel; elif command -v yum >/dev/null 2>&1; then yum install -y epel-release gdal-devel geos-devel proj-devel; else apt-get update -qq && apt-get install -y -qq libgdal-dev libgeos-dev libproj-dev; fi'"

[tool.cibuildwheel.macos]
before-all = "brew install gdal geos proj"
before-build = "pip install delocate"
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows]
# vcpkg is pre-installed on GitHub Actions windows-latest runners.
before-all = "vcpkg install gdal geos proj --triplet x64-windows"
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair --add-path C:/vcpkg/installed/x64-windows/bin -w {dest_dir} {wheel}"
environment = { CMAKE_TOOLCHAIN_FILE = "C:/vcpkg/scripts/buildsystems/vcpkg.cmake", VCPKG_TARGET_TRIPLET = "x64-windows" }
