[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"


[project]
# PyPI / pip name and import package: geospat (see wheel.packages → src/geospat/)
name = "geospat"
version = "0.0.1"
description = "geospat — Python bindings for the terra geospatial API)"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.9"
# No Python-level runtime dependencies; the C++ extension links GDAL/GEOS/PROJ
# directly.  Optional extras below cover interoperability packages.
dependencies = []

[project.optional-dependencies]
geo = ["numpy", "pandas"]

[project.urls]
Homepage = "https://github.com/rspatial/terra"


[tool.scikit-build]
# Let scikit-build-core find our CMakeLists.txt in the same directory.
cmake.build-type = "Release"

# The installed package is everything under src/geospat/
wheel.packages = ["src/geospat"]

# Make `pip install -e .` work: build the extension in-place.
build-dir = "build/{wheel_tag}"


[tool.scikit-build.cmake.define]
# Pass through any user-set variables (e.g. CMAKE_PREFIX_PATH for custom
# GDAL/GEOS installs) without hard-coding paths here.


[tool.cibuildwheel]
# CI publishes Windows wheels only (see .github/workflows/wheels.yml); Linux/macOS
# users typically use conda or system GDAL/GEOS/PROJ and build from source.
# Workflow copies repo `src/` → `python/_geospat_cpp_src/` for isolated builds.
build = ["cp39-win_amd64", "cp310-win_amd64", "cp311-win_amd64", "cp312-win_amd64"]
test-command = "python -c \"import geospat; print('geospat', geospat.__file__)\""

[tool.cibuildwheel.windows]
# vcpkg is pre-installed on GitHub Actions windows-latest runners.
before-all = "vcpkg install gdal geos proj --triplet x64-windows"
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair --add-path C:/vcpkg/installed/x64-windows/bin -w {dest_dir} {wheel}"
environment = { CMAKE_TOOLCHAIN_FILE = "C:/vcpkg/scripts/buildsystems/vcpkg.cmake", VCPKG_TARGET_TRIPLET = "x64-windows" }
